github issue addressed, added new class name for selected (jumped to) item, default is .paging-current

--- a/stylesheets/paging_keys.css
+++ b/stylesheets/paging_keys.css
@@ -13,6 +13,11 @@ body.paging-keys #paging-nav {
 	display:none;
 }
 
+/* optional style for currently item */
+.paging-current {
+  background: yellow;
+}
+
 /* the following styles are for demo purposes only */
 body {
 	background: #E4E3D3; 
